# fastapi-docker-elk-grafana

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
Dockerfiles/: Dockerfile  Dockerfile.file_api  Dockerfile.file_api_worker  Dockerfile.minio  Dockerfile.postgres  docker-compose.yaml
Dockerfiles/dependencies/file_api/: pyproject.toml  requirements.txt
Dockerfiles/entrypoints/: entrypoint_file_api.sh  entrypoint_file_api_worker.sh  entrypoint_minio.sh  entrypoint_postgres.sh
Dockerfiles/env_files/: .env_file_api.example.env  .env_minio.example.env  .env_pgadmin.example.env  .env_postgres.example.env  .env_redis.example.env
api_src/api_models/: alembic.ini  article_models.py  file_models.py
api_src/api_models/migrations/: env.py
api_src/article_api_src/: alembic.ini  config.py  main.py  run.py
api_src/article_api_src/models/: __init__.py  article_models.py
api_src/article_api_src/routers/: __init__.py  article_router.py
api_src/article_api_src/schemas/: __init__.py  request_schemas.py  response_schemas.py
api_src/file_api_src/: config.py  main.py  run.py  worker.py
file_api_src/: alembic.ini  config.py  database.py  log.ini  main.py  run.py  worker.py
file_api_src/celery_tasks/: __init__.py  file_tasks.py
file_api_src/migrations/: env.py
file_api_src/models/: file_models.py
file_api_src/routers/: __init__.py  archive_router.py  file_router.py
file_api_src/schemas/: __init__.py  file_router_requests.py  file_router_responses.py
file_api_src/services/: __init__.py  file_services.py
(+19 files in other folders)
